New features are added to feature engineering function

--- a/Main_Game_2.ipynb
+++ b/Main_Game_2.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-02T20:32:25.281673Z",
-     "start_time": "2019-11-02T20:32:23.113100Z"
+     "end_time": "2019-11-03T17:36:12.112707Z",
+     "start_time": "2019-11-03T17:36:09.915233Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-02T20:34:06.765629Z",
-     "start_time": "2019-11-02T20:32:41.920583Z"
+     "end_time": "2019-11-03T17:38:03.533190Z",
+     "start_time": "2019-11-03T17:36:12.145613Z"
     }
    },
    "outputs": [
@@ -71,8 +71,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-02T21:12:41.588012Z",
-     "start_time": "2019-11-02T21:12:41.502273Z"
+     "end_time": "2019-11-03T17:38:03.744722Z",
+     "start_time": "2019-11-03T17:38:03.692077Z"
     }
    },
    "outputs": [
@@ -226,11 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 114,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-03T17:14:07.696552Z",
-     "start_time": "2019-11-03T17:14:07.669526Z"
+     "end_time": "2019-11-03T20:14:26.365967Z",
+     "start_time": "2019-11-03T20:14:25.249125Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "activities_map = dict(zip(train['title'].unique(), \n",
+    "                          4100*np.ones(train['title'].nunique()).astype('int')))\n",
+    "activities_map['Bird Measurer (Assessment)'] = 4110"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-03T21:10:10.331735Z",
+     "start_time": "2019-11-03T21:10:10.298782Z"
     }
    },
    "outputs": [],
@@ -239,6 +255,7 @@
     "    output = []\n",
     "    cum_assessments, cum_activity, cum_clips, cum_games = 0, 0, 0, 0\n",
     "    cum_corrects, cum_incorrects = 0, 0\n",
+    "    cum_dur_assessment = 0\n",
     "    # itarates through each session of one instalation_id\n",
     "    for session_name, session in user_sample.groupby('game_session', sort=False):\n",
     "\n",
@@ -258,8 +275,8 @@
     "        features['world'] = session['world'].unique()[0]\n",
     "\n",
     "        # Just get back those with event codes of 4100 and 4110\n",
-    "#         all_attempts = session.query(\n",
-    "#             f'event_code == {title_map[features[\"title\"]]}')\n",
+    "        all_attempts = session.query(\n",
+    "            f'event_code == {activities_map[features[\"title\"]]}')\n",
     "        all_attempts = session\n",
     "\n",
     "        if features['type'] == 'Assessment':\n",
@@ -301,8 +318,20 @@
     "            features['cum_clips'] = cum_clips\n",
     "            features['cum_activity'] = cum_activity\n",
     "            features['cum_games'] = cum_games\n",
+    "            \n",
+    "            #Durations \n",
+    "            features['cum_dur_assessment'] = cum_dur_assessment\n",
+    "            #print(all_attempts['game_time'])\n",
+    "            durations = all_attempts['game_time'].diff().dropna()\n",
+    "            features['assessment_zero_dur'] = sum(durations == 0)\n",
+    "            features['assessment_dur_sum'] = sum(durations)\n",
+    "            features['assessment_dur_std'] = durations.std()\n",
+    "            features['assessment_dur_std_nonzero'] = durations.loc[durations != 0].std()\n",
+    "            features['assessment_dur_mean_nonzero'] = durations.loc[durations != 0].mean()\n",
+    "            cum_dur_assessment += features['assessment_dur_sum']\n",
+    "            \n",
     "\n",
-    "        elif features['type'] == 'Clip':\n",
+    "        elif features['type'] == 'Clip': \n",
     "            # check the total number of clips\n",
     "            cum_clips += len(all_attempts['event_data'])\n",
     "        elif features['type'] == 'Activity':\n",
@@ -313,32 +342,23 @@
     "            cum_games += len(all_attempts['event_data'])\n",
     "            #return all_attempts\n",
     "        else:\n",
-    "            print('Hello Worldk')\n",
+    "            raise Exception('{} is not within the predefined features'.format(features['type']))\n",
     "\n",
     "        if features.get('assessments', 0) > 0:\n",
     "            output.append(features)\n",
-    "    print(cum_games + cum_activity + cum_clips + cum_assessments)\n",
-    "    print\n",
     "    return pd.DataFrame(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 162,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-03T17:14:08.738180Z",
-     "start_time": "2019-11-03T17:14:08.629623Z"
+     "end_time": "2019-11-03T21:10:12.003736Z",
+     "start_time": "2019-11-03T21:10:11.648918Z"
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3801\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -362,12 +382,16 @@
        "      <th></th>\n",
        "      <th>acc</th>\n",
        "      <th>acc_group</th>\n",
+       "      <th>assessment_dur_mean_nonzero</th>\n",
+       "      <th>assessment_dur_std</th>\n",
+       "      <th>assessment_dur_std_nonzero</th>\n",
+       "      <th>assessment_dur_sum</th>\n",
+       "      <th>assessment_zero_dur</th>\n",
        "      <th>assessments</th>\n",
        "      <th>correct</th>\n",
        "      <th>cum_activity</th>\n",
-       "      <th>cum_assessments</th>\n",
-       "      <th>cum_clips</th>\n",
-       "      <th>cum_corrects</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cum_dur_assessment</th>\n",
        "      <th>cum_games</th>\n",
        "      <th>cum_incorrect</th>\n",
        "      <th>event_counter</th>\n",
@@ -384,12 +408,16 @@
        "      <th>0</th>\n",
        "      <td>0.125000</td>\n",
        "      <td>1</td>\n",
+       "      <td>1105.638889</td>\n",
+       "      <td>1110.335782</td>\n",
+       "      <td>1151.535749</td>\n",
+       "      <td>39803.0</td>\n",
+       "      <td>11</td>\n",
        "      <td>48</td>\n",
        "      <td>6</td>\n",
        "      <td>352</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>284</td>\n",
        "      <td>0</td>\n",
        "      <td>48</td>\n",
@@ -404,12 +432,16 @@
        "      <th>1</th>\n",
        "      <td>0.034483</td>\n",
        "      <td>1</td>\n",
+       "      <td>1288.875000</td>\n",
+       "      <td>1002.020175</td>\n",
+       "      <td>963.217772</td>\n",
+       "      <td>92799.0</td>\n",
+       "      <td>14</td>\n",
        "      <td>87</td>\n",
        "      <td>3</td>\n",
        "      <td>556</td>\n",
-       "      <td>48</td>\n",
-       "      <td>14</td>\n",
-       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>39803.0</td>\n",
        "      <td>525</td>\n",
        "      <td>1</td>\n",
        "      <td>87</td>\n",
@@ -424,12 +456,16 @@
        "      <th>2</th>\n",
        "      <td>0.114286</td>\n",
        "      <td>1</td>\n",
+       "      <td>1219.409091</td>\n",
+       "      <td>1051.951188</td>\n",
+       "      <td>1090.479303</td>\n",
+       "      <td>26827.0</td>\n",
+       "      <td>12</td>\n",
        "      <td>35</td>\n",
        "      <td>4</td>\n",
        "      <td>556</td>\n",
-       "      <td>135</td>\n",
-       "      <td>14</td>\n",
-       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>132602.0</td>\n",
        "      <td>525</td>\n",
        "      <td>31</td>\n",
        "      <td>35</td>\n",
@@ -444,12 +480,16 @@
        "      <th>3</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
+       "      <td>1255.571429</td>\n",
+       "      <td>1118.301314</td>\n",
+       "      <td>1446.355058</td>\n",
+       "      <td>8789.0</td>\n",
+       "      <td>9</td>\n",
        "      <td>17</td>\n",
        "      <td>0</td>\n",
        "      <td>1103</td>\n",
-       "      <td>170</td>\n",
-       "      <td>24</td>\n",
-       "      <td>13</td>\n",
+       "      <td>...</td>\n",
+       "      <td>159429.0</td>\n",
        "      <td>845</td>\n",
        "      <td>31</td>\n",
        "      <td>17</td>\n",
@@ -464,12 +504,16 @@
        "      <th>4</th>\n",
        "      <td>0.119048</td>\n",
        "      <td>1</td>\n",
+       "      <td>1061.433333</td>\n",
+       "      <td>1079.503094</td>\n",
+       "      <td>1137.829049</td>\n",
+       "      <td>31843.0</td>\n",
+       "      <td>11</td>\n",
        "      <td>42</td>\n",
        "      <td>5</td>\n",
        "      <td>1103</td>\n",
-       "      <td>187</td>\n",
-       "      <td>24</td>\n",
-       "      <td>13</td>\n",
+       "      <td>...</td>\n",
+       "      <td>168218.0</td>\n",
        "      <td>845</td>\n",
        "      <td>31</td>\n",
        "      <td>42</td>\n",
@@ -484,12 +528,16 @@
        "      <th>5</th>\n",
        "      <td>0.250000</td>\n",
        "      <td>1</td>\n",
+       "      <td>1581.217391</td>\n",
+       "      <td>1342.134149</td>\n",
+       "      <td>1334.839757</td>\n",
+       "      <td>36368.0</td>\n",
+       "      <td>8</td>\n",
        "      <td>32</td>\n",
        "      <td>8</td>\n",
        "      <td>1218</td>\n",
-       "      <td>229</td>\n",
-       "      <td>28</td>\n",
-       "      <td>18</td>\n",
+       "      <td>...</td>\n",
+       "      <td>200061.0</td>\n",
        "      <td>1111</td>\n",
        "      <td>34</td>\n",
        "      <td>32</td>\n",
@@ -502,51 +550,127 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>6 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        acc  acc_group  assessments  correct  cum_activity  cum_assessments  \\\n",
-       "0  0.125000          1           48        6           352                0   \n",
-       "1  0.034483          1           87        3           556               48   \n",
-       "2  0.114286          1           35        4           556              135   \n",
-       "3  0.000000          0           17        0          1103              170   \n",
-       "4  0.119048          1           42        5          1103              187   \n",
-       "5  0.250000          1           32        8          1218              229   \n",
+       "        acc  acc_group  assessment_dur_mean_nonzero  assessment_dur_std  \\\n",
+       "0  0.125000          1                  1105.638889         1110.335782   \n",
+       "1  0.034483          1                  1288.875000         1002.020175   \n",
+       "2  0.114286          1                  1219.409091         1051.951188   \n",
+       "3  0.000000          0                  1255.571429         1118.301314   \n",
+       "4  0.119048          1                  1061.433333         1079.503094   \n",
+       "5  0.250000          1                  1581.217391         1342.134149   \n",
        "\n",
-       "   cum_clips  cum_corrects  cum_games  cum_incorrect  event_counter  \\\n",
-       "0         11             0        284              0             48   \n",
-       "1         14             6        525              1             87   \n",
-       "2         14             9        525             31             35   \n",
-       "3         24            13        845             31             17   \n",
-       "4         24            13        845             31             42   \n",
-       "5         28            18       1111             34             32   \n",
+       "   assessment_dur_std_nonzero  assessment_dur_sum  assessment_zero_dur  \\\n",
+       "0                 1151.535749             39803.0                   11   \n",
+       "1                  963.217772             92799.0                   14   \n",
+       "2                 1090.479303             26827.0                   12   \n",
+       "3                 1446.355058              8789.0                    9   \n",
+       "4                 1137.829049             31843.0                   11   \n",
+       "5                 1334.839757             36368.0                    8   \n",
        "\n",
-       "       game_session  incorrect installation_id                         title  \\\n",
-       "0  901acc108f55a5a1          1        0006a69f  Mushroom Sorter (Assessment)   \n",
-       "1  77b8ee947eb84b4e         30        0006a69f    Bird Measurer (Assessment)   \n",
-       "2  6bdf9623adc94d89          0        0006a69f  Mushroom Sorter (Assessment)   \n",
-       "3  e7e7db2a241eadcc          0        0006a69f  Mushroom Sorter (Assessment)   \n",
-       "4  9501794defd84e4d          3        0006a69f  Mushroom Sorter (Assessment)   \n",
-       "5  a9ef3ecb3d1acc6a          0        0006a69f    Bird Measurer (Assessment)   \n",
+       "   assessments  correct  cum_activity     ...       cum_dur_assessment  \\\n",
+       "0           48        6           352     ...                      0.0   \n",
+       "1           87        3           556     ...                  39803.0   \n",
+       "2           35        4           556     ...                 132602.0   \n",
+       "3           17        0          1103     ...                 159429.0   \n",
+       "4           42        5          1103     ...                 168218.0   \n",
+       "5           32        8          1218     ...                 200061.0   \n",
        "\n",
-       "         type        world  \n",
-       "0  Assessment  TREETOPCITY  \n",
-       "1  Assessment  TREETOPCITY  \n",
-       "2  Assessment  TREETOPCITY  \n",
-       "3  Assessment  TREETOPCITY  \n",
-       "4  Assessment  TREETOPCITY  \n",
-       "5  Assessment  TREETOPCITY  "
+       "   cum_games  cum_incorrect  event_counter      game_session  incorrect  \\\n",
+       "0        284              0             48  901acc108f55a5a1          1   \n",
+       "1        525              1             87  77b8ee947eb84b4e         30   \n",
+       "2        525             31             35  6bdf9623adc94d89          0   \n",
+       "3        845             31             17  e7e7db2a241eadcc          0   \n",
+       "4        845             31             42  9501794defd84e4d          3   \n",
+       "5       1111             34             32  a9ef3ecb3d1acc6a          0   \n",
+       "\n",
+       "   installation_id                         title        type        world  \n",
+       "0         0006a69f  Mushroom Sorter (Assessment)  Assessment  TREETOPCITY  \n",
+       "1         0006a69f    Bird Measurer (Assessment)  Assessment  TREETOPCITY  \n",
+       "2         0006a69f  Mushroom Sorter (Assessment)  Assessment  TREETOPCITY  \n",
+       "3         0006a69f  Mushroom Sorter (Assessment)  Assessment  TREETOPCITY  \n",
+       "4         0006a69f  Mushroom Sorter (Assessment)  Assessment  TREETOPCITY  \n",
+       "5         0006a69f    Bird Measurer (Assessment)  Assessment  TREETOPCITY  \n",
+       "\n",
+       "[6 rows x 23 columns]"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "groups = train.groupby('installation_id', sort = False)\n",
-    "g = groups.get_group('0006a69f')\n",
+    "#groups = train.groupby('installation_id', sort = False)\n",
+    "#g = groups.get_group('0006a69f')\n",
     "feature_engineering(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-03T21:09:40.043768Z",
+     "start_time": "2019-11-03T21:09:40.036531Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "groups = train.groupby('installation_id', sort = False)\n",
+    "df_train = pd.DataFrame()\n",
+    "count = 0\n",
+    "for session_name, g in train.groupby('installation_id', sort=False):\n",
+    "    df_train = df_train.append(feature_engineering(g))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-03T21:09:32.666958Z",
+     "start_time": "2019-11-03T21:09:32.657623Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17690, 23)"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-03T21:09:28.899784Z",
+     "start_time": "2019-11-03T21:09:28.893966Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# for idx in train_labels.index:\n",
+    "#     game_session = train_labels.iloc[idx]['game_session']\n",
+    "#     installation_id = train_labels.iloc[idx]['installation_id']\n",
+    "#     acc = df_train.loc[(df_train['game_session'] == game_session) &\n",
+    "#                 (df_train['installation_id'] == installation_id)]['acc']\n",
+    "#     acc_2 = train_labels.iloc[idx]['accuracy']\n",
+    "#     acc = np.float(acc)\n",
+    "#     if  acc != acc_2:\n",
+    "#         print(idx, acc, acc_2)"
    ]
   },
   {
